fix: sts-viewer description wrap & update sablier TSML

--- a/javascript/tokenscript-viewer/src/components/viewers/sts-token/sts-viewer.css
+++ b/javascript/tokenscript-viewer/src/components/viewers/sts-token/sts-viewer.css
@@ -44,6 +44,7 @@ header {
 	display: flex;
 	flex-direction: column;
 	gap: 16px;
+	overflow-x: hidden;
 }
 
 .main-info {
@@ -87,6 +88,7 @@ header {
 
 .extra-info p {
 	margin: 0 0 16px;
+	word-wrap: break-word;
 }
 
 .attribute-container {
